--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.0",
-    "mysql": "^2.13.0"
+    "mysql": "^2.13.0",
+    "object-hash": "^1.3.1"
   }
 }
