--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.0",
     "express-myconnection": "^1.0.4",
     "express-validator": "^5.3.1",
+    "fcm-notification": "^2.0.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "joi": "^14.3.1",
