--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.0",
     "mysql": "^2.13.0",
+    "nodemailer": "^6.1.0",
+    "nodemailer-express-handlebars": "^3.0.0",
     "object-hash": "^1.3.1"
   }
 }
